--- a/OnePiece/Menu/Setting/SettingTableViewCell.xib
+++ b/OnePiece/Menu/Setting/SettingTableViewCell.xib
@@ -20,10 +20,10 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="闹钟3" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gNW-iE-ige">
-                        <rect key="frame" x="15" y="15" width="100" height="22"/>
+                        <rect key="frame" x="15" y="15" width="175" height="22"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="22" id="EZt-Qj-UUd"/>
-                            <constraint firstAttribute="width" constant="100" id="URB-wK-nrR"/>
+                            <constraint firstAttribute="width" constant="175" id="URB-wK-nrR"/>
                         </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="18"/>
                         <nil key="textColor"/>
@@ -48,6 +48,9 @@
                         <state key="normal" title="解绑">
                             <color key="titleColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                         </state>
+                        <connections>
+                            <action selector="bindPeripheralAction:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="crV-0u-NxL"/>
+                        </connections>
                     </button>
                     <switch hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="EWN-EE-35j">
                         <rect key="frame" x="311" y="11" width="51" height="31"/>
