--- a/OnePiece/History/DayView/DayDataView.xib
+++ b/OnePiece/History/DayView/DayDataView.xib
@@ -258,7 +258,7 @@
                     <nil key="highlightedColor"/>
                 </label>
             </subviews>
-            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
             <constraints>
                 <constraint firstItem="FMt-Ew-peu" firstAttribute="centerY" secondItem="4CV-vQ-Fvt" secondAttribute="centerY" id="0qc-6b-0HC"/>
                 <constraint firstItem="Gac-zA-eTr" firstAttribute="centerY" secondItem="2dj-AD-8kI" secondAttribute="centerY" id="11q-b4-Rut"/>
