--- a/OnePiece/History/MonthView/MonthDataView.xib
+++ b/OnePiece/History/MonthView/MonthDataView.xib
@@ -43,7 +43,7 @@
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icon" translatesAutoresizingMaskIntoConstraints="NO" id="9OY-FS-t0F">
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="his_power" translatesAutoresizingMaskIntoConstraints="NO" id="9OY-FS-t0F">
                     <rect key="frame" x="102" y="71" width="12" height="12"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="12" id="8mz-ci-Fre"/>
@@ -70,7 +70,7 @@
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icon" translatesAutoresizingMaskIntoConstraints="NO" id="mLb-DZ-gzN">
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="his_sleep" translatesAutoresizingMaskIntoConstraints="NO" id="mLb-DZ-gzN">
                     <rect key="frame" x="102" y="130" width="12" height="12"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="12" id="Rm8-U3-m4K"/>
@@ -109,7 +109,7 @@
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icon" translatesAutoresizingMaskIntoConstraints="NO" id="Nf4-qi-Aa9">
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="his_victory" translatesAutoresizingMaskIntoConstraints="NO" id="Nf4-qi-Aa9">
                     <rect key="frame" x="68" y="205" width="12" height="12"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="12" id="2zC-3j-EGo"/>
@@ -126,7 +126,7 @@
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icon" translatesAutoresizingMaskIntoConstraints="NO" id="9hy-U9-fhN">
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="his_dogfall" translatesAutoresizingMaskIntoConstraints="NO" id="9hy-U9-fhN">
                     <rect key="frame" x="152" y="205" width="12" height="12"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="12" id="1Tt-pH-rBd"/>
@@ -143,7 +143,7 @@
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icon" translatesAutoresizingMaskIntoConstraints="NO" id="q0S-12-9sZ">
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="his_fail" translatesAutoresizingMaskIntoConstraints="NO" id="q0S-12-9sZ">
                     <rect key="frame" x="236" y="205" width="12" height="12"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="12" id="AGm-Qu-DRF"/>
@@ -180,7 +180,7 @@
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icon" translatesAutoresizingMaskIntoConstraints="NO" id="Zr4-eJ-gOH">
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="his_fight" translatesAutoresizingMaskIntoConstraints="NO" id="Zr4-eJ-gOH">
                     <rect key="frame" x="110" y="309" width="12" height="12"/>
                     <constraints>
                         <constraint firstAttribute="width" secondItem="Zr4-eJ-gOH" secondAttribute="height" multiplier="1:1" id="8W9-gX-6Xc"/>
@@ -319,6 +319,12 @@
         </view>
     </objects>
     <resources>
+        <image name="his_dogfall" width="12" height="12"/>
+        <image name="his_fail" width="9" height="11"/>
+        <image name="his_fight" width="11" height="11"/>
+        <image name="his_power" width="12" height="14"/>
+        <image name="his_sleep" width="12" height="12"/>
+        <image name="his_victory" width="8" height="11"/>
         <image name="icon" width="11" height="11"/>
     </resources>
 </document>
