--- a/OnePiece/UserLogin/Login/LoginViewController.xib
+++ b/OnePiece/UserLogin/Login/LoginViewController.xib
@@ -114,7 +114,7 @@
                     <rect key="frame" x="191" y="297" width="116" height="19"/>
                     <nil key="textColor"/>
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                    <textInputTraits key="textInputTraits" returnKeyType="done" secureTextEntry="YES"/>
+                    <textInputTraits key="textInputTraits" keyboardType="alphabet" returnKeyType="done" secureTextEntry="YES"/>
                     <connections>
                         <outlet property="delegate" destination="-1" id="oSi-nI-m1u"/>
                     </connections>
